# db8r-eval-utility

./: .gitignore  BACKEND_REWORK_BRIEF.md  CLAUDE.md  Dockerfile  FRONTEND_BRIEF.md  README.md  pyproject.toml
docs/: gold-eval-design.md
eval_utility/: __init__.py  capture.py  config.py  corpus.py  database.py  fixtures.py  models.py  scorer.py  server.py  store.py
eval_utility/api/: __init__.py  auth.py  auth_routes.py  claims.py  dataset.py  dependencies.py  documents.py  fixtures.py  foraging.py  judgments.py  labels.py  quality_labels.py  schemas.py  spans.py  users.py
frontend/: .gitignore  Dockerfile  USER_TESTING_PLAN.md  eslint.config.js  index.html  nginx.conf  orval.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/e2e/: admin.spec.ts  auth.spec.ts  login.spec.ts  t1-retrieval.spec.ts  t2-span.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/QualityLabels/: DocumentQualityPanel.module.css  DocumentQualityPanel.tsx  SpanQualityPanel.module.css  SpanQualityPanel.tsx  index.ts
frontend/src/components/SpanAnnotator/: OverlapMenu.module.css  OverlapMenu.tsx  SpanAnnotator.module.css  SpanAnnotator.test.tsx  SpanAnnotator.tsx  SpanPopover.module.css  SpanPopover.tsx  index.ts  types.ts  utils.ts
frontend/src/components/layout/: AppShell.module.css  (+5 more)
frontend/src/lib/: utils.ts
frontend/src/test/: setup.ts
frontend/src/types/: qualityLabels.ts
tests/: test_api.py  test_auth.py  test_capture.py  test_corpus.py  test_fixtures.py  test_scorer.py  test_store.py
(+26 files in other folders)
