[tool.poetry]
name = "db8r-eval-utility"
version = "0.1.0"
description = "Offline gold-eval & annotation harness for the DB8R evidence pipeline (retrieval + extraction accuracy)."
authors = ["DB8R"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
httpx = "^0.28.1"
pydantic = { extras = ["email"], version = "^2.9" }
pydantic-settings = "^2.5"
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
alembic = "^1.15"
argon2-cffi = "^23.1"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.15.12"
pytest-asyncio = "^0.25"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = "."
